--- a/tabel/templates/tabel/index.html
+++ b/tabel/templates/tabel/index.html
@@ -3,9 +3,198 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>Tabel</title>
+
+    <link rel="stylesheet" href="../../../static/style/main.css">
+    <link rel="stylesheet" href="../../../static/style/tabel.css">
+
 </head>
 <body>
-    
+    <div class="container">
+        <div class="wrapper">
+
+            <div class="navigation-container">
+                
+                <div class="left-bar">
+                    <div class="banner">
+                        <h1 class="banner-text">
+                            Табель
+                        </h2>
+                    </div>
+                </div>
+
+                <div class="right-bar">
+                    <div class="banner">
+                        <h1 class="banner-text">
+                            Табель
+                        </h2>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="main-container">
+                <div class="main-wrapper">
+
+                    <div class="user-info">
+                        <ul class="user-info-list">
+                            <li class="user-info-item">
+                                ФИО: Фамилия Имя Отчество
+                            </li>
+                            <li class="user-info-item">
+                                Должность: Должность
+                            </li>
+                            <li class="user-info-item">
+                                Подразделение: Подразделение
+                            </li>
+                            <li class="user-info-item">
+                                Родительское подразделение: Родительское подразделение
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="tabel-table">
+
+                        <select name="period" id="period" class="form-select">
+                            <option value="1">Период 1</option>
+                            <option value="1">Период 2</option>
+                            <option value="1">Период 3</option>
+                        </select>
+
+                        <table class="tabel">
+
+                            <thead class="table-header">
+                                <tr>
+                                    <th>Сотрудник</th>
+                                    <th>Должность</th>
+                                    <th>01.12</th>
+                                    <th>02.12</th>
+                                    <th>03.12</th>
+                                    <th>04.12</th>
+                                    <th>05.12</th>
+                                    <th>06.12</th>
+                                    <th>07.12</th>
+                                    <th>08.12</th>
+                                    <th>09.12</th>
+                                    <th>10.12</th>
+                                    <th>11.12</th>
+                                    <th>12.12</th>
+                                    <th>13.12</th>
+                                    <th>14.12</th>
+                                    <th>15.12</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td colspan="1">Фамилия Имя Отчество</td>
+                                    <td>Должность 1</td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                </tr>
+                                <tr>
+                                    <td>Фамилия Имя Отчество</td>
+                                    <td>Должность 2</td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                </tr>
+                                <tr>
+                                    <td>Фамилия Имя Отчество</td>
+                                    <td>Должность 3</td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                </tr>
+                                <tr>
+                                    <td>Фамилия Имя Отчество</td>
+                                    <td>Должность 3</td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                </tr>
+                                <tr>
+                                    <td>Фамилия Имя Отчество</td>
+                                    <td>Должность 3</td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                    <td><input value="Р" class="tabel-input"></td>
+                                </tr>
+                              </tbody>
+
+                        </table>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="footer">
+                .
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
