--- a/static/style/tabel.css
+++ b/static/style/tabel.css
@@ -1,5 +1,5 @@
 .container {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -13,7 +13,6 @@
     display: flex;
     justify-content: space-between;
     background-color: rgb(223, 89, 59);
-    max-width: 100vw;
     padding: 0 10%;
 }
 
@@ -43,8 +42,21 @@
     padding: 5px 0;
 }
 
+.decoding {
+    margin-top: 10px;
+}
+
+.decod-head {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.decod-text {
+    margin: 5px;
+}
+
 .tabel {
-    margin: 30px 0;
+    margin: 40px 0;
     border: 1px solid black;
     padding: 10px;
 }
